Fix bug: table not showing on iPhone; Change table border to 0.75px

--- a/src/components/Timetable/timetable.module.css
+++ b/src/components/Timetable/timetable.module.css
@@ -26,7 +26,7 @@
 
 .table {
     position: absolute;
-    border: solid 0.5px black;
+    border: solid 0.75px black;
 }
 
 .table,
